Fixed ordering problem on map and made some minor changes to sql calls
