# api/swagger/swagger.yaml
@@ -386,84 +386,7 @@ paths:
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"
-            
-  /plot:
-    x-swagger-router-controller: plot
-    post:
-      description: Get data for two source/variable pairs in a format suitable for plotting client-side.
-      operationId: getPlotData
-      parameters:
-        - name: variableID1
-          required: false
-          type: number
-          description: Database ID of the first variable 
-          in: query
-        - name: sourceID1
-          required: false
-          type: number
-          description: Database ID of the first source 
-          in: query
-        - name: variableID2
-          required: false
-          type: number
-          description: Database ID of the second variable 
-          in: query
-        - name: sourceID2
-          required: false
-          type: number
-          description: Database ID of the second source 
-          in: query
-        - name: data
-          schema:
-            $ref: "#/definitions/PostDataRequest"
-          in: body
-          required: false
-          description: An array of space-time locations for which to get data.
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GenericResponse"
-        default:
-          description: Error
-          schema:
             $ref: "#/definitions/ErrorResponse"  
-  /png:
-    x-swagger-router-controller: png
-    get:
-      description: Get a link to a png image of the raster matching the given variable, source, and years BP for the given geometry polygon.
-      operationId: getPNG
-      parameters:
-        - name: variableID
-          required: false
-          type: number
-          description: Database ID of the variable 
-          in: query
-        - name: sourceID
-          required: false
-          type: number
-          description: Database ID of the source 
-          in: query
-        - name: yearsBP
-          required: false
-          type: number
-          description: Years before the present of the data to return.
-          in: query
-        - name: geometry
-          required: false
-          type: string
-          description: User-defined WKT geometry for which to extract png.
-          in: query
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GenericResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse" 
         
         
 # complex objects have schema definitions
